--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-react-electron",
   "version": "1.0.0",
   "description": "Vite React Electron boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "author": "me lul",
   "license": "MIT",
   "main": "dist/main/index.cjs",
   "scripts": {
@@ -13,17 +13,30 @@
     "node": ">=14.17.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/lab": "^5.0.0-alpha.61",
+    "@mui/material": "^5.2.5",
+    "@openid/appauth": "^1.3.1",
     "antd": "^4.16.13",
+    "cancelable-promise": "^4.2.1",
+    "igdb-api-node": "^5.0.1",
+    "node-powershell": "4.0.0",
+    "notistack": "^2.0.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/igdb-api-node": "^5.0.0",
+    "@types/node-powershell": "^4.0.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "electron": "^15.3.0",
     "electron-builder": "^22.13.1",
     "electron-store": "^8.0.1",
+    "prettier": "^2.5.1",
     "typescript": "^4.4.4",
     "vite": "^2.6.13"
   },
