--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.5",
-    "@openid/appauth": "^1.3.1",
+    "@mui/x-data-grid": "^5.2.1",
     "cancelable-promise": "^4.2.1",
     "igdb-api-node": "^5.0.1",
     "node-powershell": "4.0.0",
