--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-data-grid": "^5.2.1",
     "cancelable-promise": "^4.2.1",
     "igdb-api-node": "^5.0.1",
+    "node-fetch": "^2.6.6",
     "node-powershell": "4.0.0",
     "notistack": "^2.0.3",
     "react": "^17.0.2",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/igdb-api-node": "^5.0.0",
+    "@types/node-fetch": "2.5.12",
     "@types/node-powershell": "^4.0.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
