--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-fetch": "^2.6.6",
     "node-powershell": "4.0.0",
     "notistack": "^2.0.3",
+    "ps-node": "^0.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -34,6 +35,7 @@
     "@types/igdb-api-node": "^5.0.0",
     "@types/node-fetch": "2.5.12",
     "@types/node-powershell": "^4.0.1",
+    "@types/ps-node": "^0.1.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
