--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.2.1",
     "cancelable-promise": "^4.2.1",
+    "electron-log": "^4.4.4",
     "igdb-api-node": "^5.0.1",
     "node-fetch": "^2.6.6",
     "node-powershell": "4.0.0",
