--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-material-ui-carousel": "^3.1.1"
+    "react-material-ui-carousel": "^3.1.1",
+    "use-debounce": "^7.0.1"
   },
   "devDependencies": {
     "@types/igdb-api-node": "^5.0.0",
